cleaned up abstract, fixed some typos

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -5553,3 +5553,34 @@ Version Number: 1},
 	author = {Wilke, Claus O.},
 	date = {2024},
 }
+
+@article{broekman_environmental_2024,
+	title = {Environmental drivers of global variation in home range size of terrestrial and marine mammals},
+	volume = {93},
+	issn = {0021-8790, 1365-2656},
+	url = {https://besjournals.onlinelibrary.wiley.com/doi/10.1111/1365-2656.14073},
+	doi = {10.1111/1365-2656.14073},
+	abstract = {Abstract
+            
+              
+                
+                  As animal home range size ({HRS}) provides valuable information for species conservation, it is important to understand the driving factors of {HRS} variation. It is widely known that differences in species traits (e.g. body mass) are major contributors to variation in mammal {HRS}. However, most studies examining how environmental variation explains mammal {HRS} variation have been limited to a few species, or only included a single (mean) {HRS} estimate for the majority of species, neglecting intraspecific {HRS} variation. Additionally, most studies examining environmental drivers of {HRS} variation included only terrestrial species, neglecting marine species.
+                
+                
+                  Using a novel dataset of 2800 {HRS} estimates from 586 terrestrial and 27 marine mammal species, we quantified the relationships between {HRS} and environmental variables, accounting for species traits.
+                
+                
+                  Our results indicate that terrestrial mammal {HRS} was on average 5.3 times larger in areas with low human disturbance (human footprint index [{HFI}] = 0), compared to areas with maximum human disturbance ({HFI} = 50). Similarly, {HRS} was on average 5.4 times larger in areas with low annual mean productivity ({NDVI} = 0), compared to areas with high productivity ({NDVI} = 1). In addition, {HRS} increased by a factor of 1.9 on average from low to high seasonality in productivity (standard deviation ({SD}) of monthly {NDVI} from 0 to 0.36). Of these environmental variables, human disturbance and annual mean productivity explained a larger proportion of {HRS} variance than seasonality in productivity. Marine mammal {HRS} decreased, on average, by a factor of 3.7 per 10°C decline in annual mean sea surface temperature ({SST}), and increased by a factor of 1.5 per 1°C increase in {SST} seasonality ({SD} of monthly values). Annual mean {SST} explained more variance in {HRS} than {SST} seasonality. Due to the small sample size, caution should be taken when interpreting the marine mammal results.
+                
+                
+                  Our results indicate that environmental variation is relevant for {HRS} and that future environmental changes might alter the {HRS} of individuals, with potential consequences for ecosystem functioning and the effectiveness of conservation actions.},
+	pages = {488--500},
+	number = {4},
+	journaltitle = {Journal of Animal Ecology},
+	shortjournal = {Journal of Animal Ecology},
+	author = {Broekman, Maarten J. E. and Hilbers, Jelle P. and Hoeks, Selwyn and Huijbregts, Mark A. J. and Schipper, Aafke M. and Tucker, Marlee A.},
+	urldate = {2024-07-29},
+	date = {2024-04},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\WJRM248M\\Broekman et al. - 2024 - Environmental drivers of global variation in home .pdf:application/pdf},
+}
