--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -52,14 +52,14 @@ editor_options:
 \newcommand*\var{\text{Var}} <!-- variance; non-italic Var -->
 
 ```{r, echo=FALSE}
-abstract <- "The amount of space organisms use is thought to be tightly linked to the availability of resources within their habitats, such that organisms living in productive habitats generally require less space than those in resource-poor habitats. This hypothesis has widespread empirical support, but existing studies have focused primarily on responses to the mean amount of resources, while responses to the variance around the mean are still largely unknown. This is not a trivial oversight. Organisms adjust to variable environmental conditions, so failing to consider the effects of resource (un)predictability can result in a limited understanding of an organism's range size, which challenges ecological theory and applied conservation alike. In this study, we leverage the available literature to provide a unifying framework and hypotheses for the effect of mean and variance in resources on range sizes. Next, we use simulated movement data to demonstrate how the combined effects of mean and variance in resource abundance interact to shape predictable patterns in range size. Finally, we use real-world tracking data on a lowland tapir (*Tapirus terrestris*) from the Brazilian Cerrado to show how this framework can be applied to better understand the movement ecology of free-ranging animals."
+abstract <- "The amount of space organisms use is thought to be tightly linked to the availability of resources within their habitats, such that organisms living in productive habitats generally require less space than those in resource-poor habitats. This hypothesis has widespread empirical support, but existing studies have focused primarily on responses to the mean amount of resources, while responses to the variance around the mean are still largely unknown. Since organisms adjust to variable environmental conditions, failing to consider the effects of resource (un)predictability can result in an insufficient understanding of an organism's range size, which results in challenges for both ecological theory and applied conservation. In this study, we leverage the available literature to provide a unifying framework and two hypotheses for the effects of resource abundance and stochasticity on range sizes. Next, we use simulated movement data to demonstrate how the combined effects of mean and variance in resources interact to shape predictable patterns in range size. Finally, we use real-world tracking data on a lowland tapir (*Tapirus terrestris*) from the Brazilian Cerrado to show how this framework can be applied to better understand the movement ecology of free-ranging animals."
 ```
 
 <!-- elements of the title page -->
 
 \clearpage
 
-\noindent \textbf{Article type}: Major article
+\noindent \textbf{Article type}: Research article
 
 \noindent \textbf{Words in abstract}: `r stringi::stri_count_words(abstract)`
 
@@ -69,11 +69,11 @@ abstract <- "The amount of space organisms use is thought to be tightly linked t
 
 \noindent \textbf{Tables}: 0
 
-\noindent \textbf{References}: 107 (updated on 2024-07-22)
+\noindent \textbf{References}: 109
 
 \noindent \textbf{Appendices}: 3
 
-\noindent \textbf{Key words:} energetics, environmental stochasticity, home range, range size, `ctmm`, simulations
+\noindent \textbf{Key words:} energetics, resource abundance, environmental stochasticity, home range, range size, `ctmm`
 
 <!-- Authors' emails:
 Stefano Mezzini: stefano.mezzini@ubc.ca
@@ -125,7 +125,7 @@ for(i in 1:4) {
 }
 ```
 
-\noindent where $H$ is the organism's home-range size, $C$ is the organism's resource consumption (kcal day$^{-1}$), and $R$ is the resources the organism can access (kcal day$^{-1}$ unit area$^{-1}$). Harestad and Bunnel's model is simple to conceptualize, and it allows for testable predictions, but few studies are structured around a set of theoretical expectations such as Harestad and Bunnel's hypothesis. Many researchers have since demonstrated that organisms adapt their range sizes in response to resources abundance, but results are typically reported as independent, novel findings. Perhaps more problematic is the fact that, while much work has been done on estimating organisms' responses to mean resource abundance, there is little information on how organisms respond to variance around the mean [i.e., resource stochasticity, but see: @stephens_optimal_1982; @duncan_lifehistory_2015; @rizzuto_forage_2021]. Thus, there remains a need for clear hypotheses of the effects of both resource abundance and stochasticity on organisms’ range sizes.
+\noindent where $H$ is the organism's home-range size, $C$ is the organism's resource consumption (kcal day$^{-1}$), and $R$ is the resources the organism can access (kcal day$^{-1}$ unit area$^{-1}$). Harestad and Bunnel's model is simple to conceptualize, and it allows for testable predictions, but few studies are structured around a set of theoretical expectations such as Harestad and Bunnel's hypothesis. Many researchers have since demonstrated that organisms adapt their range sizes in response to resources abundance, but results are typically reported as independent, novel findings. Perhaps more problematic is the fact that, while much work has been done on estimating organisms' responses to mean resource abundance, there is little information on how organisms respond to variance around the mean [i.e., resource stochasticity, but see: @stephens_optimal_1982; @duncan_lifehistory_2015; @rizzuto_forage_2021; @broekman_environmental_2024]. Thus, there remains a need for clear hypotheses of the effects of both resource abundance and stochasticity on organisms’ range sizes.
 
 Here, we refer to a location's average amount of resources as "resource abundance", while we use the phrase "resource stochasticity" to indicate the variability in resources after accounting for changes in the mean. We argue that, on its own, a habitat's resource abundance is not sufficient to assess the habitat's quality, nor make predictions about how much space an organism might use. To see this, consider, for instance, a herbivore grazing in a grassland with relatively low but constant forage availability (i.e., low mean and variance). This individual will adopt different behaviors and adaptations if it lived in a desert with equally scarce forage but rare, sudden, and strong pulses of resources (i.e., low mean and high stochasticity). In the grassland, the grazer may require a large but constant home range size as it moves between patches in search of food, while in the desert it may switch between dispersal in search for high-resource patches and short-term range residency within patches [*sensu* @charnov_optimal_1976; see @singh_migration_2012; @wheat_migrate_2017; @teitelbaum_beyond_2019]. Previous studies suggest that resource stochasticity may decrease organisms' fitness and landscapes' energetic balances [e.g., @chevin_adaptation_2010], but there is still limited empirical evidence to support this hypothesis [but see: @herfindal_prey_2005; @nilsen_can_2005; @rizzuto_forage_2021].
 
@@ -151,7 +151,7 @@ Overall, the hypothesis that range size decreases with resource abundance, $\e(R
 
 \noindent Assuming resource stochasticity is constant over time and space can be a useful simplification of relatively stable environments or when information on how $\e(R)$ changes is limited and estimating changes in $\var(R)$ is unreasonable. However, such an assumption is likely not realistic, since $\var(R)$ often differ across space and over time. Generally, bounded qualities quantities have correlated means and variances, as in the case of random variables that are strictly positive (e.g., Gamma and Poisson) or fully bounded (e.g., beta). See Appendix A for more information.
 
-Recognizing changes in $\var(R)$ helps account for the residual, fine-scale variation in $R$ after accounting for trends in the large-scale average $R$ [e.g., variations in plant phenology between years after accounting for mean seasonal trends, see @levin_problem_1992]. However, when both $\e(R)$ and $\var(R)$ change over time (fig. A2), disentangling changes in $\e(R)$ and $\var(R)$ is not simple [@steixner-kumar_strategies_2020]. Statistically, this confound occurs because the more change one attributes to $\mu(t, \vec u)$ (i.e., the wigglier it is), the smaller $\sigma^2(t, \vec u)$ becomes. Conversely, the smoother $\mu(t, \vec u)$ is, the larger $\sigma^2(t, \vec u)$ becomes. Biologically, it is important because an organism's perception scale determines whether it attributes a change in $R$ to a trend in $\e(R)$ or as a stochastic event [i.e., due to $\var(R)$; see @levin_problem_1992]. An organism's perception of changes in $R$ will also depend strongly on the its cognitive capacities and memory [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. Whether an organism is able to predict trends in $\sigma^2(t, \vec u)$ or not, environmental variability is thought to reduce a landscape's energetic balance [@chevin_adaptation_2010], which, in turn, decreases organisms' fitness [e.g., @berger_climate_2018] and increases their range size. While this behavioral response occurs with both predictable and unpredictable stochasticity, extreme and rare events are more likely to have a stronger effect due to their unpredictability and magnitude [@logares_black_2012; @anderson_black-swan_2017]. A few recent studies support these hypotheses [@chevin_adaptation_2010; @morellet_seasonality_2013; @nandintsetseg_variability_2019; @riotte-lambert_environmental_2020], but many of them are limited in geographic and taxonomic scales, so the extent to which these preliminary findings can be generalized is currently unknown. Thus, there remains a need for developing a more complete understanding of how organisms' range sizes changes with environmental stochasticity.
+Recognizing changes in $\var(R)$ helps account for the residual, fine-scale variation in $R$ after accounting for trends in the large-scale average $R$ [e.g., variations in plant phenology between years after accounting for mean seasonal trends, see @levin_problem_1992]. However, when both $\e(R)$ and $\var(R)$ change over time (fig. A2), disentangling changes in $\e(R)$ and $\var(R)$ is not simple [@steixner-kumar_strategies_2020]. Statistically, this confound occurs because the more change one attributes to $\mu(t, \vec u)$ (i.e., the wigglier it is), the smaller $\sigma^2(t, \vec u)$ becomes. Conversely, the smoother $\mu(t, \vec u)$ is, the larger $\sigma^2(t, \vec u)$ becomes. Biologically, it is important because an organism's perception scale determines whether it attributes a change in $R$ to a trend in $\e(R)$ or as a stochastic event [i.e., due to $\var(R)$; see @levin_problem_1992]. An organism's perception of changes in $R$ will also depend strongly on the its cognitive capacities and memory [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. Whether an organism is able to predict trends in $\sigma^2(t, \vec u)$ or not, environmental variability is thought to reduce a landscape's energetic balance [@chevin_adaptation_2010], which, in turn, decreases organisms' fitness [e.g., @berger_climate_2018] and increases their range size. While this behavioral response occurs with both predictable and unpredictable stochasticity, extreme and rare events are more likely to have a stronger effect due to their unpredictability and magnitude [@logares_black_2012; @anderson_black-swan_2017]. A few recent studies support these hypotheses [@chevin_adaptation_2010; @morellet_seasonality_2013; @nandintsetseg_variability_2019; @riotte-lambert_environmental_2020; @broekman_environmental_2024], but many of them are limited in geographic and taxonomic scales or fail to account for nonlinear relationships, so the extent to which these preliminary findings can be generalized is currently unknown. Thus, there remains a need for developing a more complete understanding of how organisms' range sizes changes with environmental stochasticity.
 
 ```{r, eval=FALSE, echo=FALSE}
 # the median decreases as V(R) increases, even if E(R) is constant
@@ -230,7 +230,7 @@ Deviations from the simulations offer a means of detecting when the underlying a
 
 ## Strengths and limitations of the empirical approach
 
-\noindent There are two main advantages of taking an empirical approach. Firstly, modeling real-world animal movement data can produce scale-appropriate and easily interpretable estimates. Secondly, empirical models directly quantify the effects of $\e(R)$, $\var(R)$, and confounding variables without having to design complex and time-consuming simulations. However, it is not always possible to quantify confounding variables. For exaple, while there may be some appropriate proxies of competition, such as density of competitors, these variables may be hard to quantify, and they may not account for the confounding effects appropriately (i.e., the presence of competitors may not reflect competitive pressure). This is problematic if one is interested in estimating the direct causal effect of $\e(R)$ and $\var(R)$, which requires removing any non-negligible confounding effects [@mcelreath_statistical_2016].
+\noindent There are two main advantages of taking an empirical approach. Firstly, modeling real-world animal movement data can produce scale-appropriate and easily interpretable estimates. Secondly, empirical models directly quantify the effects of $\e(R)$, $\var(R)$, and confounding variables without having to design complex and time-consuming simulations. However, it is not always possible to quantify confounding variables. For example, while there may be some appropriate proxies of competition, such as density of competitors, these variables may be hard to quantify, and they may not account for the confounding effects appropriately (i.e., the presence of competitors may not reflect competitive pressure). This is problematic if one is interested in estimating the direct causal effect of $\e(R)$ and $\var(R)$, which requires removing any non-negligible confounding effects [@mcelreath_statistical_2016].
 
 Similarly, if $R$ is often non-measurable. Proxies of $R$, such as NDVI [@pettorelli_normalized_2011], which may introduce complexities. While $R$ and NDVI are correlated for many species [e.g., @phillips_evaluating_2008; @middleton_green-wave_2018; @seigle-ferrand_systematic_2021; @merkle_large_2016; @geremia_migrating_2019; @merkle_spatial_2019], the relationship between the two can be weak [@gautam_ndvi_2019], satellite-dependent [@huang_commentary_2021], and nonlinear [@huang_commentary_2021; @fan_global_2016]. This complexity can introduce two sources of bias: ecosystem-level biases (indicated as $Z$ in the directed acyclical graph in fig. C3) and satellite-level confounding variables ($S$ in fig. C3). Examples of ecosystem-level biases are the effects of competition, predation, habitat connectivity, and movement costs, all of which can depend on habitat quality, and, consequently, be correlated nonlinearly to $R$ and NDVI [@jetz_scaling_2004; @prox_framework_2020]. Resource-rich patches can attract larger amounts of competitors [@kacelnik_ideal_1992] and predators [@duncan_lifehistory_2015], which may, in turn, increase pressures from competition and predation [@charnov_optimal_1976; @brown_ecology_1999]. However, such pressures may result in both an expansion of the range [@jetz_scaling_2004; @prox_framework_2020] or a contraction, since larger ranges can be harder to defend and result in higher movement costs [@grant_whether_1993; @jetz_scaling_2004] and encounter rates [@martinez-garcia_how_2020]. Satellite-level confounds include information loss due to coarse spatiotemporal resolution [@huang_commentary_2021; @fan_global_2016], satellite-level error [@huang_commentary_2021; @tian_evaluating_2015; @fan_global_2016], and other limitations of remote sensing (e.g., inability to quantify specific resources or small-scale resource depletion). However, nonlinear models such as Generalized Additive Models [@wood_generalized_2017] can help account for preferences for intermediate values of remotely-sensed  $R$ [e.g., young grass rather than mature grasslands, see @huang_commentary_2021].
 
@@ -238,7 +238,7 @@ Similarly, if $R$ is often non-measurable. Proxies of $R$, such as NDVI [@pettor
 
 \noindent The work presented here provides a unifying framework for viewing movement as a response to resource abundance and stochasticity. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on organisms' range sizes and movement behavior. We demonstrate that organisms' range sizes decrease with resource abundance, increase with resource stochasticity, and that the effects of $\var(R)$ can depend strongly on $\e(R)$.
 
-Recent advances in computational power have greatly increased analysts' ability to fit computationally demanding models [@nathan_big-data_2022; @wood_generalized_2017-1] that allow biologists to move beyond only considering changes in mean conditions. By accounting for changes in stochasticity, we can start developing a more comprehensive understanding of how organisms adapt to the dynamic environments organisms live in, including recent changes in climate [@intergovernmental_panel_on_climate_change_climate_2023] and increases in the frequenct and intensity of extreme events [@logares_black_2012; @anderson_black-swan_2017; @grant_evolution_2017; @rypkema_modeling_2021; @yao_emergence_2022].
+Recent advances in computational power have greatly increased analysts' ability to fit computationally demanding models [@nathan_big-data_2022; @wood_generalized_2017-1] that allow biologists to move beyond only considering changes in mean conditions. By accounting for changes in stochasticity, we can start developing a more comprehensive understanding of how organisms adapt to the dynamic environments organisms live in, including recent changes in climate [@intergovernmental_panel_on_climate_change_climate_2023] and increases in the frequency and intensity of extreme events [@logares_black_2012; @anderson_black-swan_2017; @grant_evolution_2017; @rypkema_modeling_2021; @yao_emergence_2022].
 
 # Acknowledgements
 
