started responding to comments from reviewers

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -5584,3 +5584,69 @@ Version Number: 1},
 	langid = {english},
 	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\WJRM248M\\Broekman et al. - 2024 - Environmental drivers of global variation in home .pdf:application/pdf},
 }
+
+@article{van_haastert_food_2009,
+	title = {Food Searching Strategy of Amoeboid Cells by Starvation Induced Run Length Extension},
+	volume = {4},
+	issn = {1932-6203},
+	url = {https://dx.plos.org/10.1371/journal.pone.0006814},
+	doi = {10.1371/journal.pone.0006814},
+	pages = {e6814},
+	number = {8},
+	journaltitle = {{PLoS} {ONE}},
+	shortjournal = {{PLoS} {ONE}},
+	author = {Van Haastert, Peter J. M. and Bosgraaf, Leonard},
+	editor = {Dornhaus, Anna},
+	urldate = {2025-02-06},
+	date = {2009-08-28},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\JVIUIMUA\\Van Haastert and Bosgraaf - 2009 - Food Searching Strategy of Amoeboid Cells by Starv.pdf:application/pdf},
+}
+
+@article{taub_root_1996,
+	title = {Root System Topology of Plants from Habitats Differing in Soil Resource Availability},
+	volume = {10},
+	issn = {02698463},
+	url = {https://www.jstor.org/stable/2389851?origin=crossref},
+	doi = {10.2307/2389851},
+	pages = {258},
+	number = {2},
+	journaltitle = {Functional Ecology},
+	shortjournal = {Functional Ecology},
+	author = {Taub, D. R. and Goldberg, D.},
+	urldate = {2025-02-06},
+	date = {1996-04},
+}
+
+@article{campillo_effect_2012,
+	title = {Effect of population size in a predator–prey model},
+	volume = {246},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {03043800},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304380012003432},
+	doi = {10.1016/j.ecolmodel.2012.07.015},
+	pages = {1--10},
+	journaltitle = {Ecological Modelling},
+	shortjournal = {Ecological Modelling},
+	author = {Campillo, F. and Lobry, C.},
+	urldate = {2025-02-06},
+	date = {2012-11},
+	langid = {english},
+}
+
+@article{lee_effects_2011,
+	title = {Effects of the probability of a predator catching prey on predator–prey system stability},
+	volume = {14},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {12268615},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1226861510001329},
+	doi = {10.1016/j.aspen.2010.12.004},
+	pages = {159--162},
+	number = {2},
+	journaltitle = {Journal of Asia-Pacific Entomology},
+	shortjournal = {Journal of Asia-Pacific Entomology},
+	author = {Lee, Sang-Hee},
+	urldate = {2025-02-07},
+	date = {2011-06},
+	langid = {english},
+}
