finished addressing reviewer comments

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -5585,6 +5585,23 @@ Version Number: 1},
 	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\WJRM248M\\Broekman et al. - 2024 - Environmental drivers of global variation in home .pdf:application/pdf},
 }
 
+@article{pease_ecological_2024,
+	title = {Ecological scales of effect vary across space and time},
+	volume = {2024},
+	issn = {0906-7590, 1600-0587},
+	url = {https://nsojournals.onlinelibrary.wiley.com/doi/10.1111/ecog.07163},
+	doi = {10.1111/ecog.07163},
+	abstract = {The spatial scale at which an environmental variable is summarized can have considerable impacts on ecological inference of species distribution and abundance. While several analytical approaches have emerged to determine biologically relevant spatial scales – the spatial scale that most strongly influences the ecological patterns observed – identifying key ecological drivers of scale of effect is still underway. Additionally, several predicted ecological drivers of scale of effect can vary across space and time, but little research on spatiotemporal patterns has occurred. Here, I assessed spatial and temporal variation in scales of effect across 32 North American bird species using 18 years of empirical data from the North American breeding bird survey. Scale estimation was then coupled with trait‐based analyses and hypotheses testing of underlying processes of spatial and temporal variation in scales of effect. All 32 species tested exhibited varied scales of effect across years (average annual scales of effect ranging from 0.2 to 4.97 km) and Bird Conservation Regions ({BCR}), with spatial variability being the most pronounced. Trait‐based analyses revealed a contrary relationship between hand‐wing index, body size, and scale of effect, though the strength of this relationship was contingent on migratory status. Temporal variation in scales of effect was best explained by changes in human development over time, indicating that avian space use can be explained by an increasing human footprint. Additionally, relative population size, consistent with theoretical predictions stemming from density‐dependent population dynamics, explained notable variation in spatial and temporal scales of effect. These findings contribute to the growing landscape ecology literature by providing empirical evidence for hypothesized drivers of scales of effect. By delineating species‐specific scales of effect and elucidating their ecological drivers, this study enhances our understanding of spatial and temporal scales in ecological processes, aiding conservation efforts in a rapidly changing world.},
+	pages = {e07163},
+	number = {8},
+	journaltitle = {Ecography},
+	shortjournal = {Ecography},
+	author = {Pease, Brent S.},
+	urldate = {2024-08-08},
+	date = {2024-08},
+	langid = {english},
+}
+
 @article{van_haastert_food_2009,
 	title = {Food Searching Strategy of Amoeboid Cells by Starvation Induced Run Length Extension},
 	volume = {4},
@@ -5648,5 +5665,75 @@ Version Number: 1},
 	author = {Lee, Sang-Hee},
 	urldate = {2025-02-07},
 	date = {2011-06},
+	langid = {english},
+}
+
+@article{calabrese_ctmm_2016,
+	title = {ctmm: an {\textless}span style="font-variant:small-caps;"{\textgreater}r{\textless}/span{\textgreater} package for analyzing animal relocation data as a continuous‐time stochastic process},
+	volume = {7},
+	rights = {http://onlinelibrary.wiley.com/{termsAndConditions}\#am},
+	issn = {2041-210X, 2041-210X},
+	url = {https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.12559},
+	doi = {10.1111/2041-210X.12559},
+	shorttitle = {ctmm},
+	abstract = {Summary
+            
+              
+                
+                  Movement ecology has developed rapidly over the past decade, driven by advances in tracking technology that have largely removed data limitations. Development of rigorous analytical tools has lagged behind empirical progress, and as a result, relocation data sets have been underutilized.
+                
+                
+                  
+                    Discrete‐time correlated random walk models (
+                    {CRW}
+                    ) have long served as the foundation for analyzing relocation data. Unfortunately,
+                    {CRW}
+                    s confound the sampling and movement processes.
+                    {CRW}
+                    parameter estimates thus depend sensitively on the sampling schedule, which makes it difficult to draw sampling‐independent inferences about the underlying movement process. Furthermore,
+                    {CRW}
+                    s cannot accommodate the multiscale autocorrelations that typify modern, finely sampled relocation data sets.
+                  
+                
+                
+                  
+                    Recent developments in modelling movement as a continuous‐time stochastic process (
+                    {CTSP}
+                    ) solve these problems, but the mathematical difficulty of using
+                    {CTSP}
+                    s has limited their adoption in ecology. To remove this roadblock, we introduce the
+                    ctmm
+                    package for the R statistical computing environment.
+                    ctmm
+                    implements all of the
+                    {CTSP}
+                    s currently in use in the ecological literature and couples them with powerful statistical methods for autocorrelated data adapted from geostatistics and signal processing, including variograms, periodograms and non‐Markovian maximum likelihood estimation.
+                  
+                
+                
+                  
+                    ctmm
+                    is built around a standard workflow that begins with visual diagnostics, proceeds to candidate model identification, and then to maximum likelihood fitting and
+                    {AIC}
+                    ‐based model selection. Once an accurate
+                    {CTSP}
+                    for the data has been fitted and selected, analyses that require such a model, such as quantifying home range areas via autocorrelated kernel density estimation or estimating occurrence distributions via time‐series Kriging, can then be performed.
+                  
+                
+                
+                  
+                    We use a case study with African buffalo to demonstrate the capabilities of
+                    ctmm
+                    and highlight the steps of a typical
+                    {CTSP}
+                    movement analysis workflow.},
+	pages = {1124--1132},
+	number = {9},
+	journaltitle = {Methods in Ecology and Evolution},
+	shortjournal = {Methods Ecol Evol},
+	author = {Calabrese, Justin M. and Fleming, Chris H. and Gurarie, Eliezer},
+	editor = {Freckleton, Robert},
+	urldate = {2025-02-14},
+	date = {2016-09},
 	langid = {english},
 }
